--- a/Styles.css
+++ b/Styles.css
@@ -5,3 +5,16 @@
 .hide {
     visibility: hidden;
 }
+
+.shrink {
+    transform: scale(0.8);
+}
+
+.grey {
+    background-color: darkgray;
+}
+
+
+body {
+    text-align: center;
+}
